- .dockerignore optimized - .gitignore updated

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ ssh_deploy_qualification_job:
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker pull ${CI_REGISTRY_IMAGE}/hotel"
     - ssh ${DEPLOY_USER}$${SSH_REMOTE_HOST} 'docker stop $(docker ps -aq)' || true
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} --env-file ${ENV_VAR} ${CI_REGISTRY_IMAGE}/hotel"
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} ${CI_REGISTRY_IMAGE}/hotel"
   environment:
     name: qualification
     url: http://${SSH_REMOTE_HOST}
@@ -112,12 +112,11 @@ ssh_deploy_master_job:
     - chmod 700 ~/.ssh
     - ssh-keyscan -t rsa ${SSH_REMOTE_HOST} >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
-    - cp ${MASTER_ENV} $CI_PROJECT_DIR/.env
   script:
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker pull ${CI_REGISTRY_IMAGE}/hotel"
     - ssh ${DEPLOY_USER}$${SSH_REMOTE_HOST} "docker stop $(docker ps -aq)" || true
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} --env-file $CI_PROJECT_DIR/.env ${CI_REGISTRY_IMAGE}/hotel"
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} ${CI_REGISTRY_IMAGE}/hotel"
   environment:
     name: master
     url: http://${SSH_REMOTE_HOST}
