--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,7 @@
-**/*.md
-**/*.iml
-**/*.git
-**/*.idea
+# ignore any files or directories at any level, including the context root except "hotel" & "pom.xml"
+*
+!hotel/src
+!**/pom.xml
+
+# ignore any files or directories within the subdirectory named "api-requests"
+hotel/src/main/java/org/hotel/api-requests
