--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ ssh_deploy_qualification_job:
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker pull ${DOCKER_HOTEL_IMAGE}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} 'docker stop $(docker ps -aq)' || true
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} ${DOCKER_HOTEL_IMAGE}"
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} --env-file .env ${DOCKER_HOTEL_IMAGE}"
   environment:
     name: qualification
     url: http://${SSH_REMOTE_HOST}
@@ -127,7 +127,7 @@ ssh_deploy_master_job:
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker pull ${DOCKER_HOTEL_IMAGE}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} 'docker stop $(docker ps -aq)' || true
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} --env-file $CI_PROJECT_DIR/.env ${DOCKER_HOTEL_IMAGE}"
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} --env-file .env ${DOCKER_HOTEL_IMAGE}"
   environment:
     name: master
     url: http://${SSH_REMOTE_HOST}
