--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,9 @@ jfrog_deploy_job:
     - ./jfrog rt c cloud-jfrog-artifactory --url $ARTIFACTORY_URL --user $ARTIFACTORY_USER --apikey $ARTIFACTORY_API_KEY
     - ./jfrog rt c show
     - ./jfrog rt mvnc --server-id-resolve cloud-jfrog-artifactory --server-id-deploy cloud-jfrog-artifactory --repo-resolve-releases libs-release --repo-resolve-snapshots libs-snapshot --repo-deploy-releases libs-snapshot-local --repo-deploy-snapshots libs-release-local
+    - export M2_HOME=/usr/share/maven
   script:
-    - ./jfrog rt mvn clean install -f ./pom.xml --build-name=gitlabci-hotel101-artifactory --build-number=$CI_JOB_ID
+    - ./jfrog rt mvn clean install --build-name=gitlabci-hotel101-artifactory --build-number=$CI_JOB_ID
     - ./jfrog rt bce gitlabci-hotel101-artifactory $CI_JOB_ID
     - ./jfrog rt bp gitlabci-hotel101-artifactory $CI_JOB_ID
 
