--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ maven_build_job:
       - hotel/target/*.jar
 
 jfrog_deploy_job:
-  stage: deploy_jfrog_artifactory
+  stage: build_jfrog_artifactory
   only:
     changes:
       - hotel/**/*
