--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>org</groupId>
     <artifactId>hotel101</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>hotel101</name>
     <description>Hotel API is a web service providing online hotel search and booking functionalities.</description>
 
@@ -35,7 +35,7 @@
         <connection>scm:git:https://gitlab.com/Nakebenihime/hotel101.git</connection>
         <url>https://gitlab.com/Nakebenihime/hotel101</url>
         <developerConnection>scm:git:https://gitlab.com/Nakebenihime/hotel101.git</developerConnection>
-    <tag>0.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
     <dependencies>
